# CG

./: .gitignore  CMakeLists.txt  Makefile  README.md  \  ]  build.sh  main.xml
files/: earth.3d  engine.3d  ficheiro.3d  jupiter.3d  main.xml  mars.3d  mercury.3d  moon.3d  neptune.3d  pluto.3d  saturn.3d  solar-system.xml  sphere.3d  sphere1.3d  sphere100.3d  sun.3d  teapot.3d  test.xml  uranus.3d  venus.3d
lib/: CMakeLists.txt  Point.cpp
lib/headers/: Point.h
src/engine/: CMakeLists.txt  Colour.cpp  Element.cpp  Engine.cpp  Group.cpp  Light.cpp  Material.cpp  Model.cpp  Parser.cpp  Rotate.cpp  Scale.cpp  Scene.cpp  Transformation.cpp  Translate.cpp  Triangle.cpp  \  main.cpp  parser.cpp  tinyxml2.cpp
src/engine/headers/: Colour.h  Element.h  Engine.h  Group.h  Light.h  Material.h  Model.h  Parser.h  Rotate.h  Scale.h  Scene.h  Transformation.h  Translate.h  Triangle.h  main.h
src/generator/: CMakeLists.txt  Figure.cpp  Patch.cpp  PatchParser.cpp  Point.cpp  Point.h  figures.cpp  generator  generator.cpp  main.cpp
src/generator/headers/: Figure.h  Patch.h  PatchParser.h  figures.h  generator.h
